fix(): alignment of icons in sidebar

--- a/src/_sass/components/_destination-menu.scss
+++ b/src/_sass/components/_destination-menu.scss
@@ -29,8 +29,8 @@
 
   &__icon {
     width: 14px;
-    margin-right: 5px;
-    margin-top: 8px;
+    margin-right: 8px;
+    margin-top: 3px;
   }
 
   &__link {
